--- a/WP_sites/WP_sites.csproj
+++ b/WP_sites/WP_sites.csproj
@@ -69,16 +69,33 @@
   <ItemGroup>
     <Content Include="CSS\album.css" />
     <Content Include="CSS\bootstrap.css" />
+    <Content Include="IMG\Beth404_960x540.png" />
+    <Content Include="IMG\BethEComm960x540.png" />
+    <Content Include="IMG\BethHome960x540.png" />
+    <Content Include="IMG\CassFun960x540.png" />
+    <Content Include="IMG\CassHome960x540.png" />
+    <Content Include="IMG\CassNews960x540.png" />
+    <Content Include="IMG\CassTransp960x540.png" />
     <Content Include="IMG\Cass_300x225.png" />
+    <Content Include="IMG\EGAcontact960x934.png" />
+    <Content Include="IMG\EGAHome_960x540.png" />
     <Content Include="IMG\EGA_300x225.png" />
+    <Content Include="IMG\EGA_GSA960x934.png" />
     <Content Include="IMG\EKO_300x225.png" />
     <Content Include="IMG\LDfoto_300x225.png" />
+    <Content Include="IMG\LisaAppts960x934.png" />
+    <Content Include="IMG\LisaClientLog960x540.png" />
+    <Content Include="IMG\LisaHome960x540.png" />
+    <Content Include="IMG\LisaPortf960x540.png" />
     <Content Include="IMG\OWCecomm_960x540.png" />
     <Content Include="IMG\OWCOJO_960x540.png" />
     <Content Include="IMG\OWC_300x225.png" />
     <Content Include="IMG\OWC_960x540.png" />
     <Content Include="IMG\OWC_student_960x540.png" />
     <Content Include="IMG\Screen Shot 2020-07-18 at 7.11.08 PM.png" />
+    <Content Include="IMG\TDY960x1075.png" />
+    <Content Include="IMG\TDY960x934.png" />
+    <Content Include="IMG\TDYhome_960x540.png" />
     <Content Include="IMG\TDYJobs_300x225.png" />
     <Content Include="JS\bootstrap.bundle.js" />
     <Content Include="JS\jquery.js" />
